[project]
name = "pyspark-base"
version = "0.1.0"
description = ""
authors = [
    {name = "mikponhoue",email = "wizardy1995@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "delta-spark (==3.3.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
setuptools = "^78.1.0"
chispa = "^0.9.2"
pytest = "^8.4.2"
findspark = "^2.0.1"

[project.scripts]
pysparkbase = "pyspark_base.__main__:main"

